<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/veranstaltungen" />

    <item
        android:id="@+id/filtered_nav_events"
        android:icon="@drawable/ic_bookmark_border_black_24dp_copy"
        android:title="@string/veranstaltungen" />

    <item
        android:id="@+id/nav_timetable"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/timetable" />
    <item
        android:id="@+id/nav_navigation"
        android:icon="@drawable/ic_navigation_black_24dp"
        android:title="@string/veranstaltungsort" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/imprint" />
    </group>

</menu>
