<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/imprint_privacy_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/imprint_privacy_headline"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toTopOf="@id/wrapper" />


        <TextView
            android:id="@+id/imprint_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/imprint_headline"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/imprint_privacy_headline" />

        <TextView
            android:id="@+id/tmg_parag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tmg_parag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/imprint_headline" />

        <TextView
            android:id="@+id/institution_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/institution_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/tmg_parag" />

        <TextView
            android:id="@+id/adress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/adress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/institution_name" />


        <TextView
            android:id="@+id/accountable_person"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/accountable_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/adress" />

        <TextView
            android:id="@+id/contact_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/contact_headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/accountable_person" />

        <TextView
            android:id="@+id/contact_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:autoLink="web"
            android:text="@string/contact_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/contact_headline" />

        <TextView
            android:id="@+id/rstv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/rstv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/contact_details" />

        <TextView
            android:id="@+id/responsible_person_for_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/responsible_person_for_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/rstv" />


        <TextView
            android:id="@+id/meet_the_team_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/meet_the_team_headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/responsible_person_for_content" />

        <TextView
            android:id="@+id/meet_the_team_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/meet_the_team_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/meet_the_team_headline" />


        <TextView
            android:id="@+id/privacy_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/privacy_headline"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/meet_the_team_text" />

        <TextView
            android:id="@+id/privacy_paragraph1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/privacy_paragraph1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/privacy_headline" />

        <TextView
            android:id="@+id/disclaimer_mapFunction_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:text="@string/disclaimer_mapFunction_headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/privacy_paragraph1" />


        <TextView
            android:id="@+id/disclaimer_mapFunction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:autoLink="web"
            android:text="@string/disclaimer_mapFunction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/disclaimer_mapFunction_headline" />

        <TextView
            android:id="@+id/disclaimer_sharingFunction_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/disclaimer_sharingFunction_headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/disclaimer_mapFunction"
            />


        <TextView
            android:id="@+id/disclaimer_sharingFunction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/disclaimer_sharingFunction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/disclaimer_sharingFunction_headline"
            />

        <TextView
            android:id="@+id/disclaimer_calendarFunction_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/disclaimer_calendarFunction_headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@id/disclaimer_sharingFunction"
            />

        <TextView
            android:id="@+id/disclaimer_calendarFunction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/disclaimer_calendarFunction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/wrapper"
            app:layout_constraintTop_toBottomOf="@+id/disclaimer_calendarFunction_headline" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
